add feature teaching and professor
