# docs/swagger.yaml
@@ -36,7 +36,7 @@ definitions:
       password:
         type: string
     type: object
-host: localhost:8080/
+host: https://university-51cbe47018ea.herokuapp.com/
 info:
   contact: {}
   description: Sweager service API in Go using Gin framework
@@ -62,6 +62,24 @@ paths:
       tags:
       - Courses
   /enrollments:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all available enrollment
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helper.Response'
+      summary: Get all enrollment
+      tags:
+      - Enrollments
     post:
       consumes:
       - application/json
@@ -116,6 +134,25 @@ paths:
       summary: Delete a student's enrollment
       tags:
       - Enrollments
+  /professor:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all available professor
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helper.Response'
+      summary: Get all professor
+      tags:
+      - Professor
   /students/login:
     post:
       consumes:
@@ -205,6 +242,25 @@ paths:
       summary: Register a new student
       tags:
       - Students
+  /teaching:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all available teaching
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helper.Response'
+      summary: Get all teaching
+      tags:
+      - Teaching
 securityDefinitions:
   BearerAuth:
     in: header
